# kalman

./: .gitignore  pyproject.toml  requirements.txt
kalman/: __init__.py  kalman.py
kalman/sensors/: __init__.py  encoder.py  gps.py  sensor.py
tests/: test_kalman.py  test_kalman_cases.py
tests/sensors/: __init__.py  encoder.py  gps.py
